# Codewars_Google-Test-Frame-Work-CMake

./: .gitignore  README.md
Build Tower/: CMakeLists.txt  Kata.cxx  Kata.hxx
Build Tower/test/: CMakeLists.txt  ExampleTests.cxx
Chess Board Cell Color/: CMakeLists.txt  Kata.cxx  Kata.hxx
Chess Board Cell Color/test/: CMakeLists.txt  ExampleTests.cxx
Decode the Morse code/: CMakeLists.txt  Kata.cxx  Kata.hxx
Decode the Morse code/test/: CMakeLists.txt  ExampleTests.cxx
Drone Fly-By/: CMakeLists.txt  toTest.cxx  toTest.hxx
Drone Fly-By/test/: CMakeLists.txt  ExampleTests.cxx
Multiplication table for number/: CMakeLists.txt  Kata.cxx  Kata.hxx
Multiplication table for number/test/: CMakeLists.txt  ExampleTests.cxx
Roman Numerals Decoder/: CMakeLists.txt  Kata.cxx  Kata.hxx
Roman Numerals Decoder/test/: CMakeLists.txt  ExampleTests.cxx
Sort and Star/: CMakeLists.txt  Kata.cxx  Kata.hxx
Sort and Star/test/: CMakeLists.txt  ExampleTests.cxx
Thinking & Testing_ A and B/: CMakeLists.txt  Kata.cxx  Kata.hxx
Thinking & Testing_ A and B/test/: CMakeLists.txt  ExampleTests.cxx
